@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-11T01:53:41Z",
+  "timestamp" : "2023-11-11T08:15:48Z",
   "count_outdated" : 968,
   "uniques_outdated" : 566,
-  "count" : 1006,
-  "uniques" : 585,
+  "count" : 1008,
+  "uniques" : 586,
   "clones" : [
     {
       "timestamp": "2023-10-28T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 3,
       "count_minmax": [ 1, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-11T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
