@@ -1,5 +1,5 @@
 {
-  "count": 37,
+  "count": 39,
   "uniques": 2,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-11-10T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-11T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
