@@ -1,3 +1,12 @@
+2023-11-11T08:15:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6833095155 # 1366
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
+* notice: last 14d: unq all: 2 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 566 968 / 585 1006
+* notice: next accum: outdated-unq outdated-all / unq all: 566 968 / 586 1008
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-11-11]
+
 2023-11-11T01:53:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6831307329 # 1365
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
